--- a/Source/Digst.OioIdws/Digst.OioIdws.csproj
+++ b/Source/Digst.OioIdws/Digst.OioIdws.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Transformers\ISignatureCaseMessageTransformer.cs" />
     <Compile Include="Transformers\SignatureCaseMessageTransformer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\CertificateUtil.cs" />
     <Compile Include="Utils\RSAPKCS1SHA256SignatureDescription.cs" />
     <Compile Include="Utils\XmlSignatureUtils.cs" />
     <Compile Include="Utils\SignedXMLWithIdResolvement.cs" />
