Replaced SignatureChecker project with unit tests.

--- a/Test/Digst.Oioidws.Test/Digst.Oioidws.Test.csproj
+++ b/Test/Digst.Oioidws.Test/Digst.Oioidws.Test.csproj
@@ -66,9 +66,14 @@
       <Name>Digst.OioIdws</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
-    <Content Include="Resources\RST_Not_Signed.txt">
+    <Content Include="Resources\Request25022015.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\Response25022015.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\RST_Not_Signed.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
