Added license file and minor cleanup.

--- a/Source/Digst.OioIdws.Wsc/Digst.OioIdws.Wsc.csproj
+++ b/Source/Digst.OioIdws.Wsc/Digst.OioIdws.Wsc.csproj
@@ -75,6 +75,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="LICENSE.txt" />
     <Content Include="readme.txt" />
     <None Include="Release instructions.html" />
   </ItemGroup>
