--- a/Source/Digst.OioIdws.Wsc/Digst.OioIdws.Wsc.nuspec
+++ b/Source/Digst.OioIdws.Wsc/Digst.OioIdws.Wsc.nuspec
@@ -26,6 +26,7 @@
     <file src="bin\Release\Digst.OioIdws.LibBas.pdb" target="lib\net45" />
     <file src="App.config.install.xdt" target="content"/>
     <file src="App.config.uninstall.xdt" target="content"/>
+    <file src="LICENSE.txt" target="content"/>
     <file src="readme.txt" target=""/>
   </files>
 </package>
