--- a/Examples/Digst.OioIdws.WspExample/App.config
+++ b/Examples/Digst.OioIdws.WspExample/App.config
@@ -5,9 +5,7 @@
   </configSections>
   <system.diagnostics>
     <sources>
-      <source name="System.ServiceModel"
-            switchValue="Information"
-              >
+      <source name="System.ServiceModel" switchValue="Information">
         <listeners>
           <add name="ServiceModelMessageLoggingListener"/>
         </listeners>
@@ -17,29 +15,24 @@
           <add name="ServiceModelMessageLoggingListener"/>
         </listeners>
       </source>
-      <source name="Digst.OioIdws"
-            switchValue="Information"
-              >
+      <source name="Digst.OioIdws" switchValue="Information">
         <listeners>
           <add name="ServiceModelMessageLoggingListener"/>
         </listeners>
       </source>
     </sources>
     <sharedListeners>
-      <add initializeData="C:\temp\Digst.OioIdws.WspExample.svclog"
-        type="System.Diagnostics.XmlWriterTraceListener, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
-        name="ServiceModelMessageLoggingListener" traceOutputOptions="Timestamp">
-        <filter type="" />
+      <add initializeData="C:\temp\Digst.OioIdws.WspExample.svclog" name="ServiceModelMessageLoggingListener" traceOutputOptions="Timestamp" type="System.Diagnostics.XmlWriterTraceListener, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+        <filter type=""/>
       </add>
     </sharedListeners>
   </system.diagnostics>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+    <supportedRuntime sku=".NETFramework,Version=v4.5" version="v4.0"/>
   </startup>
   <system.serviceModel>
     <diagnostics>
-      <messageLogging logMalformedMessages="true" logMessagesAtServiceLevel="true"
-        logMessagesAtTransportLevel="true" logEntireMessage="true"/>
+      <messageLogging logEntireMessage="true" logMalformedMessages="true" logMessagesAtServiceLevel="true" logMessagesAtTransportLevel="true"/>
     </diagnostics>
     <extensions>
       <bindingExtensions>
@@ -57,43 +50,40 @@
       </endpointBehaviors>
       <serviceBehaviors>
         <behavior name="LibBasServiceBehaviourConfiguration">
-          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
-          <serviceDebug includeExceptionDetailInFaults="true" />
-            <!--serviceCredentials specifies the certificate used for signing the response to the client-->
-            <!--Setting useIdentityConfiguration to true enables WIF (System.IdentityModel configuration) and ensures that the specified service certificate is also used as decrypting key for decrypting the encrypted SAML assertion.-->
-            <!--Setting useIdentityConfiguration to true in a service behavior did not work because it happens too late in the pipe line and the service certificate would not be set to be the decrypting key-->
-            <serviceCredentials useIdentityConfiguration="true">
-            <serviceCertificate findValue="dc35c0466ad606422adff717c9cb8e3274d8772e" x509FindType="FindByThumbprint" storeLocation="LocalMachine" storeName="My"/>
+          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true"/>
+          <serviceDebug includeExceptionDetailInFaults="true"/>
+          <!--serviceCredentials specifies the certificate used for signing the response to the client-->
+          <!--Setting useIdentityConfiguration to true enables WIF (System.IdentityModel configuration) and ensures that the specified service certificate is also used as decrypting key for decrypting the encrypted SAML assertion.-->
+          <!--Setting useIdentityConfiguration to true in a service behavior did not work because it happens too late in the pipe line and the service certificate would not be set to be the decrypting key-->
+          <serviceCredentials useIdentityConfiguration="true">
+            <serviceCertificate findValue="dc35c0466ad606422adff717c9cb8e3274d8772e" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint"/>
           </serviceCredentials>
         </behavior>
       </serviceBehaviors>
     </behaviors>
     <bindings>
       <LibBasBinding>
-        <binding  name="LibBasBindingConfiguration" useHttps="false"/>
+        <binding name="LibBasBindingConfiguration" useHttps="false"/>
       </LibBasBinding>
     </bindings>
     <services>
-      <service name="Digst.OioIdws.WspExample.HelloWorld" behaviorConfiguration="LibBasServiceBehaviourConfiguration">
-        <endpoint address="http://Digst.OioIdws.Wsp:9090/HelloWorld"
-          binding="LibBasBinding" bindingConfiguration="LibBasBindingConfiguration" contract="Digst.OioIdws.WspExample.IHelloWorld" behaviorConfiguration="LibBasBehaviourConfiguration">
-        </endpoint>
+      <service behaviorConfiguration="LibBasServiceBehaviourConfiguration" name="Digst.OioIdws.WspExample.HelloWorld">
+        <endpoint address="http://Digst.OioIdws.Wsp:9090/HelloWorld" behaviorConfiguration="LibBasBehaviourConfiguration" binding="LibBasBinding" bindingConfiguration="LibBasBindingConfiguration" contract="Digst.OioIdws.WspExample.IHelloWorld"/>
       </service>
     </services>
   </system.serviceModel>
-  
   <!--system.identityModel is used by WIF which is enabled by setting useIdentityConfiguration to true under serviceCredentials,-->
   <system.identityModel>
     <identityConfiguration>
       <!--audienceUris specifies this service and is used to check that the SAML token from NemLog-in STS is indeed issued to this service.-->
       <audienceUris>
-        <add value="https://wsp.itcrew.dk" />
+        <add value="https://wsp.itcrew.dk"/>
       </audienceUris>
       <!--issuerNameRegistry specifies the certificate of the Nemlog-In STS. Both thumbprint and Common Name must be specified.-->
       <!--Issuer certificate is embedded in the encrypted SAML assertion. Hence, it it does not need to be recieved out-of-band and placed in the certificate store-->
       <issuerNameRegistry>
         <trustedIssuers>
-          <add thumbprint="2e7a061560fa2c5e141a634dc1767dacaeec8d12" name="Digitaliseringsstyrelsen - NemLog-in Test" />
+          <add name="Digitaliseringsstyrelsen - NemLog-in Test" thumbprint="2e7a061560fa2c5e141a634dc1767dacaeec8d12"/>
         </trustedIssuers>
       </issuerNameRegistry>
       <!--The Saml2SecurityTokenHandler security token handler must be replacded by a custom that handles that the signing certificate reference is the id of the encrypted assertion-->
