--- a/Tests/Digst.OioIdws.Test/Digst.OioIdws.Test.csproj
+++ b/Tests/Digst.OioIdws.Test/Digst.OioIdws.Test.csproj
@@ -59,6 +59,8 @@
   <ItemGroup>
     <Compile Include="ConfigurationTests.cs" />
     <Compile Include="Constants.cs" />
+    <Compile Include="LibBasLongRunningTests.cs" />
+    <Compile Include="OioWsTrustLongRunningTests.cs" />
     <Compile Include="OioWsTrustTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service References\HelloWorldProxy\Reference.cs">
