Made long running tests working.

--- a/Examples/Digst.OioIdws.WscExample/App.config
+++ b/Examples/Digst.OioIdws.WscExample/App.config
@@ -55,7 +55,7 @@
 					<clientCredentials>
 						<serviceCertificate>
 							<scopedCertificates>
-								  
+                <add findValue="dc35c0466ad606422adff717c9cb8e3274d8772e" storeLocation="LocalMachine" storeName="My" targetUri="http://Digst.OioIdws.Wsp:9090/HelloWorld" x509FindType="FindByThumbprint"/>
 							</scopedCertificates>
 						</serviceCertificate>
 					</clientCredentials>
