--- a/Examples/Digst.OioIdws.WspExample/App.config
+++ b/Examples/Digst.OioIdws.WspExample/App.config
@@ -63,7 +63,8 @@
     </behaviors>
     <bindings>
       <LibBasBinding>
-        <binding name="LibBasBindingConfiguration" useHttps="false"/>
+        <!-- sendTimeout is set in order for long running tests being able to test expiration scenarios -->
+        <binding name="LibBasBindingConfiguration" useHttps="false" sendTimeout="00:15:00"/>
       </LibBasBinding>
     </bindings>
     <services>
