--- a/Tests/Digst.OioIdws.Test/App.config
+++ b/Tests/Digst.OioIdws.Test/App.config
@@ -36,7 +36,7 @@
     </behaviors>
     <bindings>
       <LibBasBinding>
-        <binding name="LibBasBindingConfiguration" useHttps="false" />
+        <binding name="LibBasBindingConfiguration" useHttps="false" sendTimeout="00:15:00"/>
       </LibBasBinding>
     </bindings>
     <client>
