Added missing NuGet examples

--- a/Examples/Digst.OioIdws.WscExample/App.config
+++ b/Examples/Digst.OioIdws.WscExample/App.config
@@ -6,29 +6,54 @@
 		<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
 	</configSections>
 	<system.diagnostics>
-		<sources>
-			<source name="System.ServiceModel" switchValue="Information">
-				<listeners>
-					<add name="ServiceModelMessageLoggingListener"/>
-				</listeners>
-			</source>
-			<source name="System.ServiceModel.MessageLogging" switchValue="Verbose">
-				<listeners>
-					<add name="ServiceModelMessageLoggingListener"/>
-				</listeners>
-			</source>
-			<source name="Digst.OioIdws" switchValue="Information">
-				<listeners>
-					<add name="ServiceModelMessageLoggingListener"/>
-				</listeners>
-			</source>
-		</sources>
-		<sharedListeners>
-			<add initializeData="C:\temp\Digst.OioIdws.WscExample.svclog" name="ServiceModelMessageLoggingListener" traceOutputOptions="Timestamp" type="System.Diagnostics.XmlWriterTraceListener, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-				<filter type=""/>
-			</add>
-		</sharedListeners>
-	</system.diagnostics>
+  <sources>
+    <source propagateActivity="false" name="System.ServiceModel"
+    switchValue="Verbose">
+    <listeners>
+     <add name="ServiceModelMessageLoggingListener">
+      <filter type="" />
+     </add>
+    </listeners>
+   </source>
+    <source name="System.ServiceModel.MessageLogging" switchValue="Verbose">
+    <listeners>
+     <add name="ServiceModelMessageLoggingListener">
+      <filter type="" />
+     </add>
+    </listeners>
+   </source>
+    <!--
+    in order to enable logKnownPii the machine.config must also be updated with
+    
+    <system.serviceModel>
+      <machineSettings enableLoggingKnownPii="true"/>
+    </system.serviceModel>
+    
+    logKnownPii makes it possible to see the concrete value which the digest value represent in a SignedInfo reference element.
+    -->
+    <source name="System.IdentityModel" logKnownPii="true" switchValue="Verbose">
+      <listeners>
+        <add name="ServiceModelMessageLoggingListener">
+          <filter type="" />
+        </add>
+      </listeners>
+    </source>
+   <source name="Digst.OioIdws" switchValue="Information">
+    <listeners>
+     <add name="ServiceModelMessageLoggingListener">
+      <filter type="" />
+     </add>
+    </listeners>
+   </source>
+  </sources>
+  <sharedListeners>
+   <add initializeData="C:\temp\Digst.OioIdws.WscExample.svclog"
+    type="System.Diagnostics.XmlWriterTraceListener, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
+    name="ServiceModelMessageLoggingListener" traceOutputOptions="Timestamp">
+    <filter type="" />
+   </add>
+  </sharedListeners>
+ </system.diagnostics>
 	<oioIdwsWcfConfiguration debugMode="true" stsEndpointAddress="https://SecureTokenService.test-nemlog-in.dk/SecurityTokenService.svc" tokenLifeTimeInMinutes="5" wspEndpointID="https://wsp.itcrew.dk">
 		<clientCertificate findValue="0919ed32cf8758a002b39c10352be7dcccf1222a" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint"/>
 		<stsCertificate findValue="2e7a061560fa2c5e141a634dc1767dacaeec8d12" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint"/>
