Corrected some tests and added XML examples from .Net and Java illustrating the differences in how the digest value is calculated. .Net has an extra root element "Encrypted Assertion" and a namespace declaration on the "o" prefix.

--- a/Examples/Digst.OioIdws.WspExample/App.config
+++ b/Examples/Digst.OioIdws.WspExample/App.config
@@ -15,6 +15,22 @@
           <add name="ServiceModelMessageLoggingListener"/>
         </listeners>
       </source>
+      <!--
+      in order to enable logKnownPii the machine.config must also be updated with
+    
+      <system.serviceModel>
+        <machineSettings enableLoggingKnownPii="true"/>
+      </system.serviceModel>
+    
+      logKnownPii makes it possible to see the concrete value which the digest value represent in a SignedInfo reference element.
+      -->
+      <source name="System.IdentityModel" logKnownPii="true" switchValue="Verbose">
+        <listeners>
+          <add name="ServiceModelMessageLoggingListener">
+            <filter type="" />
+          </add>
+        </listeners>
+      </source>
       <source name="Digst.OioIdws" switchValue="Information">
         <listeners>
           <add name="ServiceModelMessageLoggingListener"/>
