--- a/Source/Digst.OioIdws.LibBas/Digst.OioIdws.LibBas.csproj
+++ b/Source/Digst.OioIdws.LibBas/Digst.OioIdws.LibBas.csproj
@@ -55,6 +55,7 @@
     <Compile Include="MessageInspectors\LibBasMessageInspector.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StrCustomization\CustomizeIdStrIssuedSecurityTokenParameters.cs" />
+    <Compile Include="GenericXmlSecurityTokenHandler\CustomGenericXmlSecurityToken.cs" />
     <Compile Include="StrCustomization\StrReferenceSaml2SecurityTokenHandler.cs" />
   </ItemGroup>
   <ItemGroup>
