--- a/Examples/Digst.OioIdws.WspExampleNuGet/packages.config
+++ b/Examples/Digst.OioIdws.WspExampleNuGet/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Digst.OioIdws.Wsp" version="1.0.0-beta" targetFramework="net45" />
+  <package id="Digst.OioIdws.Wsp" version="1.0.0" targetFramework="net45" />
 </packages>
