--- a/Source/Digst.OioIdws.OioWsTrust/Digst.OioIdws.OioWsTrust.csproj
+++ b/Source/Digst.OioIdws.OioWsTrust/Digst.OioIdws.OioWsTrust.csproj
@@ -4,13 +4,14 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{90C95503-CDA6-46E1-91AF-3A52D04DBCC3}</ProjectGuid>
+    <ProjectGuid>{021345B3-85F0-4AE3-9989-DC96772C7799}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Digst.OioIdws.Common</RootNamespace>
-    <AssemblyName>Digst.OioIdws.Common</AssemblyName>
+    <RootNamespace>Digst.OioIdws.OioWsTrust</RootNamespace>
+    <AssemblyName>Digst.OioIdws.OioWsTrust</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -31,8 +32,11 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.IdentityModel" />
+    <Reference Include="System.Runtime.Caching" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -42,15 +46,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Constants\LibBas.cs" />
-    <Compile Include="Constants\WsAdressing.cs" />
-    <Compile Include="Logging\ILogger.cs" />
-    <Compile Include="Logging\Logger.cs" />
-    <Compile Include="Logging\Configuration.cs" />
-    <Compile Include="Logging\LoggerFactory.cs" />
-    <Compile Include="Logging\TraceLogger.cs" />
+    <Compile Include="TokenIssuingRequestConfiguration.cs" />
+    <Compile Include="ITokenIssuingService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SoapFaults.cs" />
+    <Compile Include="ReplyAttackCache.cs" />
+    <Compile Include="SignatureCase\ISignatureCaseMessageTransformer.cs" />
+    <Compile Include="SignatureCase\SignatureCaseBindingElement.cs" />
+    <Compile Include="SignatureCase\SignatureCaseChannel.cs" />
+    <Compile Include="SignatureCase\SignatureCaseChannelFactory.cs" />
+    <Compile Include="SignatureCase\SignatureCaseMessageTransformer.cs" />
+    <Compile Include="TokenIssuingService.cs" />
+    <Compile Include="Utils\RSAPKCS1SHA256SignatureDescription.cs" />
+    <Compile Include="Utils\SignedXMLWithIdResolvement.cs" />
+    <Compile Include="Utils\XmlSignatureUtils.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Digst.OioIdws.Common\Digst.OioIdws.Common.csproj">
+      <Project>{90c95503-cda6-46e1-91af-3a52d04dbcc3}</Project>
+      <Name>Digst.OioIdws.Common</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
