--- a/Source/Digst.OioIdws.Wsc/Digst.OioIdws.Wsc.csproj
+++ b/Source/Digst.OioIdws.Wsc/Digst.OioIdws.Wsc.csproj
@@ -46,20 +46,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="OioWsTrust\ReplyAttackCache.cs" />
-    <Compile Include="OioWsTrust\SignatureCase\SignatureCaseBindingElement.cs" />
-    <Compile Include="OioWsTrust\SignatureCase\SignatureCaseChannelFactory.cs" />
-    <Compile Include="OioWsTrust\SignatureCase\SignatureCaseChannel.cs" />
     <Compile Include="OioWsTrust\Configuration.cs" />
     <Compile Include="OioWsTrust\ITokenService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="OioWsTrust\TokenService.cs" />
-    <Compile Include="OioWsTrust\SignatureCase\ISignatureCaseMessageTransformer.cs" />
-    <Compile Include="OioWsTrust\SignatureCase\SignatureCaseMessageTransformer.cs" />
     <Compile Include="Utils\CertificateUtil.cs" />
-    <Compile Include="Utils\RSAPKCS1SHA256SignatureDescription.cs" />
-    <Compile Include="Utils\SignedXMLWithIdResolvement.cs" />
-    <Compile Include="Utils\XmlSignatureUtils.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config.install.xdt" />
@@ -74,6 +65,10 @@
     <ProjectReference Include="..\Digst.OioIdws.LibBas\Digst.OioIdws.LibBas.csproj">
       <Project>{1DC7EA39-865D-4386-A814-9062441056FE}</Project>
       <Name>Digst.OioIdws.LibBas</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Digst.OioIdws.OioWsTrust\Digst.OioIdws.OioWsTrust.csproj">
+      <Project>{021345b3-85f0-4ae3-9989-dc96772c7799}</Project>
+      <Name>Digst.OioIdws.OioWsTrust</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
