--- a/Source/Digst.OioIdws.Rest.Client/Digst.OioIdws.Rest.Client.csproj
+++ b/Source/Digst.OioIdws.Rest.Client/Digst.OioIdws.Rest.Client.csproj
@@ -31,9 +31,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=7.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Newtonsoft.Json.7.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.IdentityModel" />
+    <Reference Include="System.Net.Http.WebRequest" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -42,7 +47,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccessToken.cs" />
     <Compile Include="OioIdwsClient.cs" />
+    <Compile Include="OioIdwsClientSettings.cs" />
+    <Compile Include="OioIdwsRequestHandler.cs" />
+    <Compile Include="OioIdwsStsSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -50,6 +59,13 @@
       <Project>{021345b3-85f0-4ae3-9989-dc96772c7799}</Project>
       <Name>Digst.OioIdws.OioWsTrust</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Digst.OioIdws.Rest.Common\Digst.OioIdws.Rest.Common.csproj">
+      <Project>{b367bf97-79f3-4bba-8a2f-9a21ffdf9950}</Project>
+      <Name>Digst.OioIdws.Rest.Common</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
