--- a/Source/Digst.OioIdws.Rest.Common/Digst.OioIdws.Rest.Common.csproj
+++ b/Source/Digst.OioIdws.Rest.Common/Digst.OioIdws.Rest.Common.csproj
@@ -41,8 +41,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccessTokenType.cs" />
     <Compile Include="AuthenticationErrorCodes.cs" />
     <Compile Include="HttpHeaderUtils.cs" />
+    <Compile Include="OioIdwsClaim.cs" />
+    <Compile Include="OioIdwsToken.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
