--- a/Tests/Digst.OioIdws.Test.Common/Digst.OioIdws.Test.Common.csproj
+++ b/Tests/Digst.OioIdws.Test.Common/Digst.OioIdws.Test.Common.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Constants.cs" />
     <Compile Include="OwinConsoleLoggerFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="CertificateUtil.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
