--- a/Source/Digst.OioIdws.Rest.ProviderAuthentication/Digst.OioIdws.Rest.ProviderAuthentication.csproj
+++ b/Source/Digst.OioIdws.Rest.ProviderAuthentication/Digst.OioIdws.Rest.ProviderAuthentication.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.IdentityModel" />
+    <Reference Include="System.Net.Http.Formatting, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -57,6 +58,7 @@
     <Compile Include="OioIdwsProviderAuthenticationOptions.cs" />
     <Compile Include="PrincipalBuilder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TokenProvider.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
