--- a/Digst.OioIdws.Rest.Examples.Client/Digst.OioIdws.Rest.Examples.Client.csproj
+++ b/Digst.OioIdws.Rest.Examples.Client/Digst.OioIdws.Rest.Examples.Client.csproj
@@ -4,16 +4,18 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D97CEB63-1139-4DC3-B630-67E823376326}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{7FFD3B1F-CD9A-458F-AE7C-A6AD118225A3}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Digst.OioIdws.Rest.AuthorizationService</RootNamespace>
-    <AssemblyName>Digst.OioIdws.Rest.AuthorizationService</AssemblyName>
+    <RootNamespace>Digst.OioIdws.Rest.Examples.Client</RootNamespace>
+    <AssemblyName>Digst.OioIdws.Rest.Examples.Client</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,6 +25,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -31,21 +34,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.Owin, Version=3.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.Owin.3.0.1\lib\net45\Microsoft.Owin.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Newtonsoft.Json, Version=7.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Newtonsoft.Json.7.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Owin, Version=1.0.0.0, Culture=neutral, PublicKeyToken=f0ebd12fd5e55cc5, processorArchitecture=MSIL">
-      <HintPath>..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.IdentityModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -54,30 +44,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IssuerAudiences.cs" />
-    <Compile Include="Issuing\AccessToken.cs" />
-    <Compile Include="Issuing\AccessTokenGenerator.cs" />
-    <Compile Include="Issuing\AccessTokenIssuer.cs" />
-    <Compile Include="Retrieval\AccessTokenRetriever.cs" />
-    <Compile Include="Issuing\ITokenValidator.cs" />
-    <Compile Include="Issuing\TokenValidator.cs" />
-    <Compile Include="Issuing\TokenValidationResult.cs" />
-    <Compile Include="OwinContextExtensions.cs" />
-    <Compile Include="Issuing\IAccessTokenGenerator.cs" />
-    <Compile Include="Storage\ISecurityTokenStore.cs" />
-    <Compile Include="OioIdwsAuthorizationServiceAppBuilderExtensions.cs" />
-    <Compile Include="OioIdwsAuthorizationServiceMiddleware.cs" />
-    <Compile Include="OioIdwsAuthorizationServiceOptions.cs" />
+    <Compile Include="CertificateUtil.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Storage\MemorySecurityTokenStore.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Digst.OioIdws.Rest.Common\Digst.OioIdws.Rest.Common.csproj">
-      <Project>{b367bf97-79f3-4bba-8a2f-9a21ffdf9950}</Project>
-      <Name>Digst.OioIdws.Rest.Common</Name>
+    <ProjectReference Include="..\source\Digst.OioIdws.Rest.Client\Digst.OioIdws.Rest.Client.csproj">
+      <Project>{7e94185f-75da-4e26-80cd-d3bda207fe5f}</Project>
+      <Name>Digst.OioIdws.Rest.Client</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
