project structure, cleanup

--- a/Examples/Digst.OioIdws.Rest.Examples.Client/Digst.OioIdws.Rest.Examples.Client.csproj
+++ b/Examples/Digst.OioIdws.Rest.Examples.Client/Digst.OioIdws.Rest.Examples.Client.csproj
@@ -52,7 +52,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\source\Digst.OioIdws.Rest.Client\Digst.OioIdws.Rest.Client.csproj">
+    <ProjectReference Include="..\..\source\Digst.OioIdws.Rest.Client\Digst.OioIdws.Rest.Client.csproj">
       <Project>{7e94185f-75da-4e26-80cd-d3bda207fe5f}</Project>
       <Name>Digst.OioIdws.Rest.Client</Name>
     </ProjectReference>
