--- a/Source/Digst.OioIdws.Rest.AuthorizationService/Digst.OioIdws.Rest.AuthorizationService.csproj
+++ b/Source/Digst.OioIdws.Rest.AuthorizationService/Digst.OioIdws.Rest.AuthorizationService.csproj
@@ -46,12 +46,10 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.IdentityModel" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
+    <Reference Include="System.XML" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IssuerAudiences.cs" />
