Rewrote AuthorizationService to depend on OWIN security stack

--- a/Examples/Digst.OioIdws.Rest.Examples.AS/packages.config
+++ b/Examples/Digst.OioIdws.Rest.Examples.AS/packages.config
@@ -4,6 +4,7 @@
   <package id="Microsoft.Owin.Diagnostics" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Owin.Host.HttpListener" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Owin.Hosting" version="3.0.1" targetFramework="net45" />
+  <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Owin.SelfHost" version="3.0.1" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
 </packages>
