--- a/Source/Digst.OioIdws.Rest.AuthorizationService/Digst.OioIdws.Rest.AuthorizationService.csproj
+++ b/Source/Digst.OioIdws.Rest.AuthorizationService/Digst.OioIdws.Rest.AuthorizationService.csproj
@@ -35,6 +35,10 @@
       <HintPath>..\packages\Microsoft.Owin.3.0.1\lib\net45\Microsoft.Owin.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Microsoft.Owin.Security, Version=3.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Microsoft.Owin.Security.3.0.1\lib\net45\Microsoft.Owin.Security.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=7.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Newtonsoft.Json.7.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
@@ -56,6 +60,7 @@
     <Compile Include="Issuing\AccessToken.cs" />
     <Compile Include="Issuing\AccessTokenGenerator.cs" />
     <Compile Include="Issuing\AccessTokenIssuer.cs" />
+    <Compile Include="OioIdwsAuthorizationServiceHandler.cs" />
     <Compile Include="Retrieval\AccessTokenRetriever.cs" />
     <Compile Include="Issuing\ITokenValidator.cs" />
     <Compile Include="Issuing\TokenValidator.cs" />
@@ -67,7 +72,7 @@
     <Compile Include="OioIdwsAuthorizationServiceMiddleware.cs" />
     <Compile Include="OioIdwsAuthorizationServiceOptions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Storage\MemorySecurityTokenStore.cs" />
+    <Compile Include="Storage\InMemorySecurityTokenStore.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
