--- a/Tests/Digst.OioIdws.Rest.AuthorizationService.Tests/packages.config
+++ b/Tests/Digst.OioIdws.Rest.AuthorizationService.Tests/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Owin.Hosting" version="3.0.1" targetFramework="net452" />
+  <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Owin.Testing" version="3.0.1" targetFramework="net452" />
   <package id="Moq" version="4.2.1510.2205" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
