Added option for using in memory access to token information between WSP and AS. Added example of running combined server hosting AS and WSP in one application

--- a/Source/Digst.OioIdws.Rest.Server/Digst.OioIdws.Rest.Server.csproj
+++ b/Source/Digst.OioIdws.Rest.Server/Digst.OioIdws.Rest.Server.csproj
@@ -70,6 +70,7 @@
     <Compile Include="OioIdwsAuthorizationServiceHandler.cs" />
     <Compile Include="OioIdwsClaim.cs" />
     <Compile Include="OioIdwsToken.cs" />
+    <Compile Include="TokenRetrievalMethod.cs" />
     <Compile Include="TokenRetrieval\AccessTokenRetriever.cs" />
     <Compile Include="Issuing\ITokenValidator.cs" />
     <Compile Include="Issuing\TokenValidator.cs" />
